--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header class="header">
       <nav class="navbar">
         <div class="container">
-          <h1 class="logo txt-light lg-heading">Shadan Khan</h1>
+          <h1 class="logo txt-light lg-heading">World Travel</h1>
 
           <ul class="nav-items">
             <li class="nav-item"><a href="./index.html">Home</a></li>
-            <li class="nav-item"><a href="./contact.html">Contact</a></li>
             <li class="nav-item"><a href="./about.html">About</a></li>
+            <li class="nav-item"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -100,13 +100,13 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
+    <footer class="footer bg-native">
       <div class="social-media-link">
         <i class="fab fa-facebook fa-4x"></i>
         <i class="fab fa-instagram fa-4x"></i>
         <i class="fab fa-linkedin fa-4x"></i>      
       </div>
-      <p>world travel &copy; 2020 all reserved</p>
+      <p>world travel &copy; 2023 all reserved</p>
     </footer>
   </body>
 </html>
