--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
           <div class="txt-box">
             <h2 class="lg-heading txt-black">Kullu,India</h2>
             <p class="txt-grey">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
-              incidunt, beatae ea ullam voluptatibus delectus, aut nemo iste
-              doloremque quos perspiciatis vitae sint, dicta maxime corporis.
-              Nulla repellendus omnis corporis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi esse ad minus reprehenderit placeat et a architecto omnis id quae doloremque dolorem suscipit sit, beatae corporis, quas ipsam iste voluptas.
             </p>
             <a href="" class="btn btn-sec txt-red">More</a>
           </div>
@@ -56,10 +53,7 @@
           <div class="txt-box">
             <h2 class="lg-heading txt-black">Gulmarg,India</h2>
             <p class="txt-grey">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              ab? Tempore ab reprehenderit hic. Rem maxime praesentium adipisci
-              commodi iste voluptas dolorem distinctio sapiente veniam ullam,
-              saepe rerum nulla laudantium?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi esse ad minus reprehenderit placeat et a architecto omnis id quae doloremque dolorem suscipit sit, beatae corporis, quas ipsam iste voluptas.
             </p>
             <a href="" class="btn btn-sec txt-red">More</a>
           </div>
@@ -83,18 +77,18 @@
             <i class="fas fa-strikethrough fa-2x"></i>
             <h2 class="md-heading">Less price</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-              libero modi ea atque molestiae eaque odit sequi praesentium
-              dignissimos vero.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quolibero
+              modi ea atque molestiae eaque odit sequi praesentiumdignissimos
+              vero.
             </p>
           </div>
           <div class="box box3">
             <i class="fas fa-user-check fa-2x txt-red"></i>
             <h2 class="md-heading">Experience</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-              libero modi ea atque molestiae eaque odit sequi praesentium
-              dignissimos vero.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quolibero
+              modi ea atque molestiae eaque odit sequi praesentiumdignissimos
+              vero.
             </p>
           </div>
         </div>
